# approximate-convolution-accelerator

./: .gitignore  README.md  meson.build
Spatial_convolution/includes/: linear.hpp
Spatial_convolution/includes/hw-ops/: Convolution.hpp  Padding.hpp
Spatial_convolution/includes/sw-ops/: Convolution.hpp  Padding.h.gch  Padding.hpp
Spatial_convolution/includes/utils/: PrintMatrx.hpp  printmatrix.hpp
Spatial_convolution/test/: Test.cpp
Spatial_convolution/test/sw-ops/: testbench.hpp
include/: convolution.hpp
include/hw-ops/: Convolution.hpp  Convolver.hpp  FFT.hpp  FFT_class.hpp  Linebuffer.hpp  Padding.hpp  Space.hpp  Winograd.hpp  Winograd5.hpp  Winograd7.hpp
include/hw-ops/cores/: arithmetic-exact.hpp
include/sw-ops/: Convolution.hpp  FFT.hpp  FFT_2D.hpp  FFT_conv_2D.hpp  IFFT.hpp  IFFT_2D.hpp  PaddKernel_FFT.hpp  Padding.hpp
include/utils/: FFT_header.hpp  FFT_header_2D.hpp  FFT_header_3D.hpp  IFFT_header.hpp  IFFT_header_2D.hpp  Kernel3.hpp  Kernel5.hpp  Kernel7.hpp  Stream.hpp  image_stats.hpp  printmatrix.hpp
tests/hw-ops/: Makefile  script.tcl
tests/hw-ops/directives/: accel.tcl  convolver_vector.tcl  single_core.tcl  space.tcl  winograd.tcl
tests/hw-ops/helpers/: coreops.mk  extract-errors.sh  extract-report.py  help.mk  measure-all.sh
tests/hw-ops/testbenches/: FFT_tb.cpp  accel_tb.cpp  convolver_vector_tb.cpp  open_tb.cpp  single_core_tb.cpp  space_tb.cpp  spatialconv_tb.cpp  winograd_tb.cpp
tests/sw-ops/: FFT_conv_header.hpp  convFFT.cpp  convolution.cpp  meson.build  open.cpp
tools/: Filters.md  symbolic.py  wincnn.py
(+62 files in other folders)
